--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,11 +31,10 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r "Report automation/requirements.txt"
+          pip install -r requirements.txt
 
       - name: Run tests
         run: |
-          cd "Report automation"
           PYTHONPATH=src python -m unittest discover -s tests
           PYTHONPATH=src python -m compileall -q src
 
@@ -55,7 +54,7 @@ jobs:
       - name: Build and push image
         run: |
           IMAGE_URI=${{ env.REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ env.GAR_REPO }}/${{ env.JOB_NAME }}:${{ github.sha }}
-          gcloud builds submit "Report automation" --tag "$IMAGE_URI"
+          gcloud builds submit . --tag "$IMAGE_URI"
           echo "IMAGE_URI=$IMAGE_URI" >> $GITHUB_ENV
 
       - name: Deploy Cloud Run Job
